// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drivers should render with hubs 1`] = `
<body>
  <div>
    <div>
      RegionsSelected
    </div>
  </div>
</body>
`;

exports[`Drivers should render without hubs 1`] = `
<body>
  <div>
    <div>
      RegionSelect
    </div>
  </div>
</body>
`;
